--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	
 	<!-- Meta -->
-	<title>Simulating The World (In Emoji)</title>
+	<title>絵文字で世界をシミュレーション</title>
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
 	<link rel="icon" type="image/png" href="favicon.png">
