--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 
 	<div id="splash_title">
 		<div style="font-size: 180px; line-height: 150px;">
-			SIMULATING
+			絵文字で
 		</div>
 		<div style="font-size: 88px; line-height: 88px;">
-			THE WORLD
-			(IN EMOJI<span id="splash_kiss">😘</span>)
+			世界を
+			シミュレーション！<span id="splash_kiss">😘</span>)
 		</div>
 		<div style="margin:0 auto; width:920px; text-align:right; font-size:25px">
 			nicky case, jan 2016
