--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 	<div id="splash_shadow"></div>
 
 	<div id="splash_title">
-		<div style="font-size: 180px; line-height: 150px;">
+		<div style="font-size: 88px; line-height: 88px;">
 			絵文字で
 		</div>
 		<div style="font-size: 88px; line-height: 88px;">
 			世界を
-			シミュレーション！<span id="splash_kiss">😘</span>)
+			シミュレーション！<span id="splash_kiss">😘</span>
 		</div>
 		<div style="margin:0 auto; width:920px; text-align:right; font-size:25px">
 			nicky case, jan 2016
@@ -71,35 +71,29 @@
 		Such is life.
 	</div>
 	<p>
-		So, I used to live in California.
-		Back then, it was going through a rough season of droughts, water shortages, and wildfires.
-		It's still going on, actually.
-		These problems involve a messy mix of
-		environmental, economic, and political systems...
-		all of which came together to create the
-		perfect lack-of-rain-let-alone-a-storm.
+		私はカリフォルニアに住んでいました。
+		その頃、カリフォルニアは干ばつや水不足、野火の大変な時期でした。
+		今でも続いている問題です。
+		これらの問題を解決するには、環境、経済、政治のシステムを変える必要があり、非常に複雑です。
 	</p>
 	<p>
-		Point is, our world is run by complex systems.
-		We may feel helpless to change them or understand them...
-		but I believe all of us can — and <i>must</i> — learn to
-		<b>think in systems</b>.
+		この正解は複雑なシステムによって成り立っています。
+		しかし、私は皆が、システムの考え方を身につけることができると信じています。
 	</p>
 	<p>
-		That’s where simulations come in!
-		It’s easier to understand a system if you can <i>see</i> the system,
-		or better yet, <i>play</i> with the system.
-		So today, I’d like to share with you some simple simulations of the world...
-		made in emoji. 🌲🌲🌲
+		そこでこのシミュレーションツールの出番です！
+		システムを観察することで、より簡単にシステムを理解することができます。
+		それだけではなく、システムで遊んでみることで、もっと簡単に理解することができるでしょう。
+		絵文字シミュレーションを紹介します。 🌲🌲🌲
 	</p>
 </div>
 
 <!-- 0: GETTING USED TO THE SIM INTERFACE -->
 <div class="example">
 	<div id="title">
-		<b>A Tiny Forest</b> For Tiny Trees
+		小さな木の小さな森
 	</div>
-	<iframe src="https://ncase.me/simulating/model?local=forest/0_growth&play=0&edit=1"></iframe>
+	<iframe src="https://mikinomura.github.io/simulating-japanese/simulating/model?local=forest/0_growth&play=0&edit=1"></iframe>
 	<div id="example_link"></div>
 </div>
 
