--- a/model/index.html
+++ b/model/index.html
@@ -28,22 +28,22 @@
 		<div id="play_controls">
 			
 			<!-- New Board -->
-			<div class="control_button" id="play_reset">reset</div>
+			<div class="control_button" id="play_reset">リセット</div>
 			<div class="control_divider"></div>
 
 			<!-- Playback -->
-			<div class="control_button" id="play_pause">pause</div>
+			<div class="control_button" id="play_pause">ポーズ</div>
 			<div class="control_speed">
 				<input id="control_fps" type="range" min="1" max="60" step="1">
 				<br>
-				<div style="float:left;">slow</div>
-				<div style="float:right;">fast</div>
+				<div style="float:left;">遅く</div>
+				<div style="float:right;">速く</div>
 			</div>
-			<div class="control_button" id="play_step">step</div>
+			<div class="control_button" id="play_step">ステップ</div>
 			<div class="control_divider"></div>
 
 			<!-- Drawing Shtuff -->
-			<div class="control_button" id="play_draw">draw <div></div></div>
+			<div class="control_button" id="play_draw">描く<div></div></div>
 
 		</div>
 	</div>
