--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 	<div id="title">
 		<b>A Forest</b> With Thunderbolt &amp; Lightning, Very Very Frightening
 	</div>
-	<iframe src="https://ncase.me/simulating/model?local=forest/1_fire&play=1&edit=1"></iframe>
+	<iframe src="https://mikinomura.github.io/simulating-japanese/model?local=forest/1_fire&play=1&edit=1"></iframe>
 	<div id="example_link"></div>
 </div>
 
