--- a/index.html
+++ b/index.html
@@ -91,86 +91,25 @@
 <!-- 0: GETTING USED TO THE SIM INTERFACE -->
 <div class="example">
 	<div id="title">
-		小さな木の小さな森
+		A Tiny Forest with Tiny Trees (小さな木の小さな森)
 	</div>
 	<iframe src="https://mikinomura.github.io/simulating-japanese/model?local=forest/0_growth&play=0&edit=1"></iframe>
 	<div id="example_link"></div>
 </div>
 
 <!-- 1: INTRODUCTION - SYSTEMS THEORY, PREDICT CHANGE -->
-<div class="words">
-	<p>
-		As it turns out, forest firefighters <i>already</i> use computer simulations
-		to tackle wildfires, <i>in real time</i>!
-		And it’s not just firefighters.
-		With the help of simulations, a growing group of scientists
-		from different disciplines have discovered a few strange things about the systems of our world.
-	</p>
-	<p>
-		First, <b>emergence</b>:
-		complex systems can arise from simple rules.
-		This is how a few chess rules can give us infinite play,
-		and how these tiny emoji sims can capture real complexity.
-	</p>
-	<p>
-		Second, <i>all complex systems have things in common</i>.
-		So in a way... Financial crises are like forest fires.
-		Terrorist groups are like termite colonies.
-		Pandemics are like a GIF people won't stop spreading.
-		Since you can learn a few core lessons about <i>all</i> systems from <i>any</i> system,
-		let’s stick with our forest sim, and add one more rule:
-	</p>
-	<p style="text-align:center">
-		🌲→🔥 Trees sometimes get hit by lightning &amp; catch on fire.
-	</p>
-	<p>
-		Sims can help <i>explain</i> a system,
-		but they're also great for <i>exploring</i> systems.
-		Experimentation.
-		Asking, <i>“what if?”</i>
-	</p>
-	<p>
-		For example, <i>what</i> do you think would happen now,
-		<i>if</i> you increased tree growth? (empty→🌲)
-		What behavior would <i>emerge?</i>
-		Don’t worry, you're not being judged or graded,
-		this is only for you to express your prediction:
-	</p>
-	<p>
-	<form name="predict_fire" class="reader_choice">
-	<label>
-		<input type="radio" name="prediction" value="more" checked>
-		🌲📈&rarr;🌲📈: More trees lead to more trees, duh.
-	</label>
-	<label>
-		<input type="radio" name="prediction" value="less">
-		🌲📈&rarr;🌲📉: More trees lead to fewer trees.
-	</label>
-	<label>
-		<input type="radio" name="prediction" value="none">
-		Neither.
-	</label>
-	<label>
-		<input type="radio" name="prediction" value="both">
-		Both... somehow.
-	</label>
-	</form>
-	</p>
-	<p>
-		And now, you get to run that experiment.
-	</p>
-</div>
 
 <!-- 1: WHAT IF, HIGHER GROWTH? -->
 <div class="example">
 	<div id="title">
-		<b>A Forest</b> With Thunderbolt &amp; Lightning, Very Very Frightening
+		A Forest With Thunderbolt &amp; Lightning, Very Very Frightening (落雷の森)
 	</div>
 	<iframe src="https://mikinomura.github.io/simulating-japanese/model?local=forest/1_fire&play=1&edit=1"></iframe>
 	<div id="example_link"></div>
 </div>
 
 <!-- 2: REFLECT, AND FEEDBACK LOOPS -->
+<!--
 <div class="words">
 	<p name="predict_fire" class="reader_reflect">
 
@@ -263,17 +202,19 @@
 		Let's do it.
 	</p>
 </div>
+-->
 
 <!-- 2: CREATE A TREE-KILLING SOLUTION -->
 <div class="example">
 	<div id="title">
-		<b>A Forest</b> Where You Show Trees No Mercy
+		A Forest Where You Show Trees No Mercy(容赦のない森)
 	</div>
-	<iframe src="https://ncase.me/simulating/model?local=forest/2_firebreak&edit=1&paused=1"></iframe>
+	<iframe src="https://mikinomura.github.io/simulating-japanese/model?local=forest/2_firebreak&edit=1&paused=1"></iframe>
 	<div id="example_link"></div>
 </div>
 
 <!-- 3: CHANGING LOOPS, AND PLANTS -->
+<!--
 <div class="words">
 	<p>
 		Think about how counterintuitive that is,
@@ -373,17 +314,18 @@
 		And here we go again...
 	</p>
 </div>
-
+-->
 <!-- 3: JERK PLANTS -->
 <div class="example">
 	<div id="title">
-		<b>A Forest</b> Where Some Trees Are, Like, Total Jerks
+		<b>A Forest</b> Where Some Trees Are, Like, Total Jerks （悪者のいる森）
 	</div>
-	<iframe src="https://ncase.me/simulating/model?local=forest/3_plants&edit=1"></iframe>
+	<iframe src="https://mikinomura.github.io/simulating-japanese/model?local=forest/3_plants&edit=1"></iframe>
 	<div id="example_link"></div>
 </div>
 
 <!-- 4: REFLECT, SELF-ORG, AND REAL LIFE FORESTS -->
+<!--
 <div class="words">
 	<p>
 		Did you notice how, in the normal case, the plants formed clusters
@@ -484,20 +426,20 @@
 		Explore.
 	</p>
 </div>
-
+-->
 <!-- 4: OTHER COMPLEX WORLD PROBLEMS -->
 <div id="zoo_example" class="example">
 	<div id="title">
-		<b>A Simulation</b> With A Bunch Of...
+		<b>A Simulation</b> With A Bunch Of... （この仲間たちとのシミュレーション）
 		<div id="zoo_select">
-			<div src="https://ncase.me/simulating/model?local=zoo/sick&edit=1">
-				😰 Peeps Gettin' Sick
+			<div src="https://mikinomura.github.io/simulating-japanese/model?local=zoo/sick&edit=1">
+				😰 Peeps Gettin' Sick （病気の人たち）
 			</div>
-			<div src="https://ncase.me/simulating/model?local=zoo/schelling&edit=1&paused=1">
-				🐹 Rodent Racism
+			<div src="https://mikinomura.github.io/simulating-japanese/model?local=zoo/schelling&edit=1&paused=1">
+				🐹 Rodent Racism （ネズミの人種差別）
 			</div>
-			<div src="https://ncase.me/simulating/model?local=zoo/civil_war&edit=1">
-				😾 Cat/Dog Civil Conflict
+			<div src="https://mikinomura.github.io/simulating-japanese/model?local=zoo/civil_war&edit=1">
+				😾 Cat/Dog Civil Conflict （猫と犬の内戦）
 			</div>
 		</div>
 	</div>
@@ -506,6 +448,7 @@
 </div>
 
 <!-- 5: THE STAKES OF EDU SIMS -->
+<!--
 <div class="words">
 	<p>
 		Scientists, policymakers, forest firefighters...
@@ -540,22 +483,23 @@
 		💡📈→💡📈→💡📈⟲
 	</p>
 </div>
-
+-->
 <!-- 5: MAKE YOUR OWN SIM -->
 <div class="dark">
 <div class="example" style="margin:0 auto; width:1040px;">
 	<div id="title">
-		<b>A Simulation</b> Of Whatever You Want, Yo
+		オリジナルのシミュレーションを作ろう
 	</div>
 	<iframe style="border-color:#000; width:1040px; height:585px; background:#fff"
 		src="https://ncase.me/simulating/model"></iframe>
 	<div id="example_link" style="color:#888" manual="true">
-		<a href="model" target="_blank">open in new tab</a>
+		<a href="model" target="_blank">新しいタブで開く</a>
 	</div>
 </div>
 </div>
 
 <!-- EPILOGUE: FROM THE BOTTOM UP -->
+<!--
 <div class="words">
 	<p>
 	In the face of all the world's complex problems,
@@ -576,7 +520,7 @@
 	<p>
 	All we gotta do is start thinking in systems, and see the forest for the trees. 🌲🌲🌲
 	</p>
-
+-->
 
 	<!-- Static Social Sharing Stuff -->
 	<div id="social">
