--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 		<b>A Simulation</b> With A Bunch Of... （この仲間たちとのシミュレーション）
 		<div id="zoo_select">
 			<div src="https://mikinomura.github.io/simulating-japanese/model?local=zoo/sick&edit=1">
-				😰 Peeps Gettin' Sick （病気の人たち）
+				😰 Peeps Gettin' Sick （感染が広がる）
 			</div>
 			<div src="https://mikinomura.github.io/simulating-japanese/model?local=zoo/schelling&edit=1&paused=1">
 				🐹 Rodent Racism （ネズミの人種差別）
